--- a/SaxoBooks/SaxoBooks/SaxoBooks.csproj
+++ b/SaxoBooks/SaxoBooks/SaxoBooks.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Data\Configurations\BookConfiguration.cs" />
+    <Compile Include="Data\Models\ResponseRootObject.cs" />
     <Compile Include="Data\Repository\IRepository.cs" />
     <Compile Include="Data\Repository\Repository.cs" />
     <Compile Include="Data\SaxoBooksContext.cs" />
@@ -206,6 +207,9 @@
     <Compile Include="Data\Models\Book.cs" />
     <Compile Include="Data\Models\IdentityModels.cs" />
     <Compile Include="Data\Models\ManageViewModels.cs" />
+    <Compile Include="Infrastructure\CustomContractResolver.cs" />
+    <Compile Include="Infrastructure\ISaxoBooksService.cs" />
+    <Compile Include="Infrastructure\SaxoBooksService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\BooksViewModel.cs" />
