Lots of refactoring UI changes Looks like ready. V1.0

--- a/SaxoBooks/SaxoBooks/Web.config
+++ b/SaxoBooks/SaxoBooks/Web.config
@@ -16,6 +16,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    
+    <!-- Saxo Books Api configurations -->
+    <add key="ApiKey" value="key=08964e27966e4ca99eb0029ac4c4c217"/>
+    <add key="ApiUrl" value="http://api.saxo.com/v1/products/products.json"/>
+    <add key="DateTineFormat" value="MM-DD-YYYY"/>
+    <add key="BooksPerRequest" value="2"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
